# pdf2color-rmdoc

./: README.md  pyproject.toml
src/pdf2color_rmdoc/: cli.py
src/pdf2color_rmdoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
