[project]
name = "pdf2color-rmdoc"
version = "0.1.0"
description = "Convert PDF to (Paper Pro) color-capable reMarkable .rmdoc using Drawj2d"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pdf2color-rmdoc = "pdf2color_rmdoc.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
